reactDashboard/src/components/DataCharts/DataCharts.css
.chart-border {
  box-shadow: 10px 10px 5px #aaaaaa;
  padding: 10px 50px 80px;
  margin-left: auto;
  margin-right: auto;
  display: flex;
  flex-direction: column;
  justify-content: center;
  background-color: white;
  position: relative;
}

.darkmode .chart-border {
  background-color: rgb(64, 64, 64);
  box-shadow: none;
}

.chart-border .container,
.chart-border .container-lg,
.chart-border .container-md,
.chart-border .container-sm {
  width: 100%;
}

.chart-title h2 {
  font-size: 1.25rem;
  font-weight: bold;
  text-align: left;
  padding-top: 20px;
  margin: 0 0 10px 5px;
  color: #133a53;
}

.darkmode .chart-title h2 {
  color: #f2f2f2;
}

.chart-title {
  display: flex;
  flex-direction: row;
  margin: 0;
  justify-content: flex-start;
}

@media screen and (max-width: 600px) {
  .chart-title {
    flex-direction: column;
  }
}

.chart-title.col {
  padding-left: 0;
}

.date-range-selector {
  margin: 0;
}

@media screen and (min-width: 1200px) {
  .container,
  .container-lg,
  .container-md,
  .container-sm,
  .container-xl {
    max-width: 100%;
  }
}

.chart-container {
  height: 100%;
  width: 100%;
  min-height: 400px;
  max-height: 400px;
}

.region-chart-container {
  height: 100%;
  width: 100%;
  background-color: white;
}

.sonification-play-button {
  position: absolute;
  top: 20px;
  right: 40px;
  background-color: inherit;
  font-size: 0.5rem;
  border: 1px solid #6c6c6c;
  border-radius: 10px;
  padding: 7px;
  width: 7em;
  height: 7em;
  color: black;
  border-color: #cccccc;
}

.sonification-play-button h5 {
  font-size: 0.75rem;
  color: #6c6c6c;
  margin-bottom: 0;
}

.darkmode .sonification-play-button h5 {
  color: #f2f2f2;
}

.sonification-play-button:hover {
  box-shadow: 5px 5px 5px #aaaaaa;
}

.darkmode .sonification-play-button:hover {
  box-shadow: none;
}

.sonification-play-button.col {
  border: none;
  box-shadow: none;
  display: hidden;
  background: none;
}

#date-range-slider-position {
  position: absolute;
  bottom: 0;
  max-width: 90vw;
  right: 40px;
  left: 40px;
  padding: 0 0 70px;
  margin: 0 auto;
}

@media screen and (max-width: 1400px) {
  #date-range-slider-position {
    max-width: 80vw;
  }
}

@media screen and (max-width: 1200px) {
  #date-range-slider-position {
    max-width: 70vw;
  }
}

@media screen and (max-width: 993px) {
  #date-range-slider-position {
    max-width: 60vw;
  }
}

@media screen and (max-width: 750px) {
  #date-range-slider-position {
    max-width: 50vw;
  }
}

@media screen and (max-width: 995px) {
  .sonification-play-button {
    top: 10px;
    right: 20px;
  }
}

@media screen and (max-width: 450px) {
  .sonification-play-button {
    font-size: 0.4rem;
    padding: 10px 5px;
    top: 20px;
  }
}

.data-charts-container {
  background-color: #f2f2f2;
  padding: 20px 0 30px;
  margin: 0;
}

.darkmode .data-charts-container {
  background-color: #262626;
}

legend {
  font-size: 1rem;
  font-weight: bold;
}

canvas {
  padding-bottom: 15px;
  padding-top: 15px;
}

.chart-dropdown-container.row {
  margin: 0;
}

.darkmode .MuiSlider-markLabel {
  color: #f2f2f2;
}

.darkmode span.MuiSlider-thumb {
  box-shadow: none;
}

